tests/baselines/reference/importHelpersVerbatimModuleSyntax.errors.txt
/main.cts(2,19): error TS2343: This syntax requires an imported helper named '__rest' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.


==== /node_modules/tslib/package.json (0 errors) ====
    {
      "name": "tslib",
      "main": "tslib.js",
      "module": "tslib.es6.js",
      "jsnext:main": "tslib.es6.js",
      "typings": "tslib.d.ts",
      "exports": {
          ".": {
              "module": {
                  "types": "./modules/index.d.ts",
                  "default": "./tslib.es6.mjs"
              },
              "import": {
                  "node": "./modules/index.js",
                  "default": {
                      "types": "./modules/index.d.ts",
                      "default": "./tslib.es6.mjs"
                  }
              },
              "default": "./tslib.js"
          },
          "./*": "./*",
          "./": "./"
      }
    }
    
==== /node_modules/tslib/tslib.d.ts (0 errors) ====
    export declare var __rest: any;
    
==== /node_modules/tslib/modules/package.json (0 errors) ====
    { "type": "module" }
    
==== /node_modules/tslib/modules/index.d.ts (0 errors) ====
    export {};
    
==== /main.cts (1 errors) ====
    function foo(args: any) {
      const { bar, ...extraArgs } = args;
                      ~~~~~~~~~
!!! error TS2343: This syntax requires an imported helper named '__rest' which does not exist in 'tslib'. Consider upgrading your version of 'tslib'.
      return extraArgs;
    }
    export = foo;
    